[gd_scene load_steps=3 format=3 uid="uid://c3q3f81rhemtl"]

[ext_resource type="Script" uid="uid://dtdh80ojfdyym" path="res://LevelManager/Scripts/NumpadUI.gd" id="1_j2yuy"]
[ext_resource type="Script" uid="uid://d285xj2bu5i74" path="res://src/input/input_receiver.gd" id="2_hvo6y"]

[node name="ElevatorPanel" type="Control" node_paths=PackedStringArray("display_label", "input_receiver", "_1")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2yuy")
display_label = NodePath("Panel/Label")
input_receiver = NodePath("InputReceiver")
_1 = NodePath("Panel/GridContainer/1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 116.0
offset_right = 750.0
offset_bottom = 505.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 44.0
offset_top = 33.0
offset_right = 310.0
offset_bottom = 126.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -49.5
offset_right = 98.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="1" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "1"

[node name="2" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "2"

[node name="3" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "3"

[node name="4" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "4"

[node name="5" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "5"

[node name="6" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "6"

[node name="7" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "7"

[node name="8" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "8"

[node name="9" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "9"

[node name="Erase" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Erase"

[node name="0" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "0"

[node name="Enter" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Enter"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 315.0
offset_top = 11.0
offset_right = 340.0
offset_bottom = 30.0

[node name="InputReceiver" type="Node" parent="."]
script = ExtResource("2_hvo6y")
metadata/_custom_type_script = "uid://d285xj2bu5i74"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
